WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316714
[Site Isolation] REGRESSION(
314640@main
): [ iOS Debug ] 32x site-isolation (layout-tests) are constant crashes
https://bugs.webkit.org/show_bug.cgi?id=316714
Summary
[Site Isolation] REGRESSION(314640@main): [ iOS Debug ] 32x site-isolation (l...
rupin
Reported
2026-06-09 15:48:40 PDT
rdar://179135314
Attachments
Add attachment
proposed patch, testcase, etc.
rupin
Comment 1
2026-06-09 15:57:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66813
EWS
Comment 2
2026-06-10 11:05:40 PDT
Committed
314916@main
(8df9152b4619): <
https://commits.webkit.org/314916@main
> Reviewed commits have been landed. Closing PR #66813 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug